force-app/main/default/objects/Contact/fields/ABLE_Account__c.field-meta.xml
<CustomField>
    <fullName>ABLE_Account__c</fullName>
    <label>ABLE Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>