force-app/main/default/objects/Contact/fields/Abuse_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Abuse_of_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abuse of Funds</label>
    <type>Checkbox</type>
</CustomField>