force-app/main/default/objects/Contact/fields/Additional_Funding__c.field-meta.xml
<CustomField>
    <fullName>Additional_Funding__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Additional Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>