force-app/main/default/objects/Contact/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <formula>IF(ISBLANK( Age__c ), null,
IF(Age__c &lt; 12, &quot;Under 12&quot;,
IF(Age__c &lt;= 17, &quot;12-17&quot;,
IF(Age__c &lt;= 24, &quot;18-24&quot;,
IF(Age__c &lt;=34, &quot;25-34&quot;,
IF(Age__c &lt;=44, &quot;35-44&quot;,
IF(Age__c &lt;=54, &quot;45-54&quot;,
IF(Age__c &lt;=64, &quot;55-64&quot;,
IF(Age__c &lt;=74, &quot;65-74&quot;,
&quot;75+&quot;)))))))) &amp; &quot; years old&quot;)</formula>
    <label>Age Range</label>
    <type>Text</type>
</CustomField>