force-app/main/default/objects/Contact/fields/Alternative_Format_Needed_for_Documents__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Format_Needed_for_Documents__c</fullName>
    <label>Alternative Format Needed for Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>