force-app/main/default/objects/Contact/fields/Annual_Active_Spending_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Active_Spending_Plan_Amount__c</fullName>
    <label>Annual Active Spending Plan Amount</label>
    <summarizedField>Spending_Plan__c.Annualized_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Spending_Plan__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Spending_Plan__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>