force-app/main/default/objects/Contact/fields/Applicant_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Benefits__c</fullName>
    <label>Applicant Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplemental Security Income (SSI)</fullName>
            </value>
            <value>
                <fullName>Social Security Disability Insurance (SSDI)</fullName>
            </value>
            <value>
                <fullName>Food Stamps/Vision Card</fullName>
            </value>
            <value>
                <fullName>Medicaid or Working Healthy</fullName>
            </value>
            <value>
                <fullName>Other Benefits</fullName>
            </value>
            <value>
                <fullName>Applicant receives no public benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>