force-app/main/default/objects/Contact/fields/Applied_for_Arcare_Charitable_Fund_grant__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Arcare_Charitable_Fund_grant__c</fullName>
    <inlineHelpText>Has the applicant applied for a grant through the Arcare Charitable Fund in the past?</inlineHelpText>
    <label>Applied for Arcare Charitable Fund grant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>