force-app/main/default/objects/Contact/fields/Attorney_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Full_Name__c</fullName>
    <formula>Attorney__r.FirstName +  &quot; &quot; + Attorney__r.LastName</formula>
    <label>Attorney Full Name</label>
    <type>Text</type>
</CustomField>