force-app/main/default/objects/Contact/fields/Bene_Right_to_Live_Trust_Property__c.field-meta.xml
<CustomField>
    <fullName>Bene_Right_to_Live_Trust_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bene Right to Live Trust Property</label>
    <type>Checkbox</type>
</CustomField>