force-app/main/default/objects/Contact/fields/Beneficiary_Enjoys_Doing_Why_Important__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Enjoys_Doing_Why_Important__c</fullName>
    <label>Beneficiary Enjoys Doing/Why Important</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>