force-app/main/default/objects/Contact/fields/Beneficiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_ID__c</fullName>
    <formula>Generated_Beneficiary_ID__c</formula>
    <label>Beneficiary ID</label>
    <type>Text</type>
</CustomField>