force-app/main/default/objects/Contact/fields/Beneficiary_Is_Rep_Payee__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Is_Rep_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiary Is Rep Payee</label>
    <type>Checkbox</type>
</CustomField>