force-app/main/default/objects/Contact/fields/Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Birth_Month__c</fullName>
    <formula>Case(Month(Birthdate ),
1,&quot;January&quot;,
2,&quot;February&quot;,
3,&quot;March&quot;,
4,&quot;April&quot;,
5,&quot;May&quot;,
6,&quot;June&quot;,
7,&quot;July&quot;,
8,&quot;August&quot;,
9,&quot;September&quot;,
10,&quot;Octovber&quot;,
11,&quot;November&quot;,
12,&quot;January&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Month</label>
    <type>Text</type>
</CustomField>