force-app/main/default/objects/Contact/fields/Birthdate_Copy_For_Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Copy_For_Matching_Rule__c</fullName>
    <label>Birthdate Copy (For Matching Rule)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>