force-app/main/default/objects/Contact/fields/Birthday_Day__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Day__c</fullName>
    <formula>DAY(Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>