force-app/main/default/objects/Contact/fields/Birthday_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month__c</fullName>
    <formula>MONTH(Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>