force-app/main/default/objects/Contact/fields/Board_Member_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_Start_Date__c</fullName>
    <label>Board Member Start Date</label>
    <type>Date</type>
</CustomField>