force-app/main/default/objects/Contact/fields/Caution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Caution_Notes__c</fullName>
    <inlineHelpText>The Caution Notes do not appear in the banner at the top of the page. Use the Caution Summary if you want this informaton to appear at the top of the page. This field allows more characters if you need to add more details beyond the Caution Summary field.</inlineHelpText>
    <label>Caution Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>