force-app/main/default/objects/Contact/fields/Caution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Caution_Summary__c</fullName>
    <inlineHelpText>Text in this field will appear at the top of the page as a banner</inlineHelpText>
    <label>Caution Summary</label>
    <type>TextArea</type>
</CustomField>