force-app/main/default/objects/Contact/fields/Co_Conservator__c.field-meta.xml
<CustomField>
    <fullName>Co_Conservator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Conservator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Co-Conservator)</relationshipLabel>
    <relationshipName>Contacts6</relationshipName>
    <type>Lookup</type>
</CustomField>