force-app/main/default/objects/Contact/fields/Co_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Co_Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Guardian</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Co-Guardian)</relationshipLabel>
    <relationshipName>Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>