force-app/main/default/objects/Contact/fields/Co_occurring_Mental_Health_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Co_occurring_Mental_Health_Diagnosis__c</fullName>
    <label>Co-occurring Mental Health Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>