force-app/main/default/objects/Contact/fields/Co_Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Co_Power_of_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Power of Attorney</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Co-POA)</relationshipLabel>
    <relationshipName>Contacts8</relationshipName>
    <type>Lookup</type>
</CustomField>