force-app/main/default/objects/Contact/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>