force-app/main/default/objects/Contact/fields/Condolence_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Condolence_Sent_Date__c</fullName>
    <inlineHelpText>Complete on the Closing record</inlineHelpText>
    <label>Condolence Sent Date</label>
    <type>Date</type>
</CustomField>