force-app/main/default/objects/Contact/fields/Conservator__c.field-meta.xml
<CustomField>
    <fullName>Conservator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conservator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Conservator)</relationshipLabel>
    <relationshipName>Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>