force-app/main/default/objects/Contact/fields/Contact_Dupe_Rule__c.field-meta.xml
<CustomField>
    <fullName>Contact_Dupe_Rule__c</fullName>
    <label>Contact Dupe Rule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>