force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Client: Non-Pooled</fullName>
            </value>
            <value>
                <fullName>Client: Pooled 3d Party</fullName>
            </value>
            <value>
                <fullName>Client: Pooled 3d Party FF</fullName>
            </value>
            <value>
                <fullName>Client: Pooled MARC</fullName>
            </value>
            <value>
                <fullName>Client: Pooled MARC FF</fullName>
            </value>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Financial Professional</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>