force-app/main/default/objects/Contact/fields/Conversion_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Account_Number__c</fullName>
    <label>Conversion Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>