force-app/main/default/objects/Contact/fields/Conversion_Beneficiary_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Beneficiary_Account_ID__c</fullName>
    <label>Conversion Beneficiary Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>