force-app/main/default/objects/Contact/fields/Conversion_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Created_By__c</fullName>
    <label>Conversion Created By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>