force-app/main/default/objects/Contact/fields/Conversion_Email__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Email__c</fullName>
    <label>Conversion Email</label>
    <type>TextArea</type>
</CustomField>