force-app/main/default/objects/Contact/fields/Conversion_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Org_Name__c</fullName>
    <label>Conversion Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>