force-app/main/default/objects/Contact/fields/Conversion_Other_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Other_Relationship__c</fullName>
    <label>Conversion Other Relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>