force-app/main/default/objects/Contact/fields/Conversion_Person_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Person_Relationship__c</fullName>
    <label>Conversion Person Relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>