force-app/main/default/objects/Contact/fields/Copy_Mailing_Details_to_Residential__c.field-meta.xml
<CustomField>
    <fullName>Copy_Mailing_Details_to_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Mailing Details to Residential</label>
    <type>Checkbox</type>
</CustomField>