force-app/main/default/objects/Contact/fields/Court_Order_Approving_Petition_Received__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Approving_Petition_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Order Approving Petition Received</label>
    <type>Checkbox</type>
</CustomField>