force-app/main/default/objects/Contact/fields/Current_Needs_Requests__c.field-meta.xml
<CustomField>
    <fullName>Current_Needs_Requests__c</fullName>
    <inlineHelpText>Does the beneficiary have any current needs or requests that would make their quality of life better?</inlineHelpText>
    <label>Current Needs/Requests</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>