force-app/main/default/objects/Contact/fields/DADs_Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>DADs_Return_Receipt_Date__c</fullName>
    <label>DADs Return Receipt Date</label>
    <type>Date</type>
</CustomField>