force-app/main/default/objects/Contact/fields/Daily_Living_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Daily_Living_Support_Needed__c</fullName>
    <label>Daily Living Support Needed</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>