force-app/main/default/objects/Contact/fields/Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death__c</fullName>
    <inlineHelpText>Automatically fills in when Date of Death is entered on the Closing record</inlineHelpText>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>