force-app/main/default/objects/Contact/fields/Death_Certificate_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Received_Date__c</fullName>
    <inlineHelpText>Complete on the Closing record</inlineHelpText>
    <label>Death Certificate Received Date</label>
    <type>Date</type>
</CustomField>