force-app/main/default/objects/Contact/fields/Death_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Notification_Date__c</fullName>
    <inlineHelpText>Updated by a flow when completed on Closing record</inlineHelpText>
    <label>Death Notification Date</label>
    <type>Date</type>
</CustomField>