force-app/main/default/objects/Contact/fields/Death_Notified_By__c.field-meta.xml
<CustomField>
    <fullName>Death_Notified_By__c</fullName>
    <inlineHelpText>Updated by a flow when completed on Closing record</inlineHelpText>
    <label>Death Notified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>