force-app/main/default/objects/Contact/fields/Decree_Guardianship_Consvtship_Received__c.field-meta.xml
<CustomField>
    <fullName>Decree_Guardianship_Consvtship_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decree Guardianship/Consvtship Received</label>
    <type>Checkbox</type>
</CustomField>