force-app/main/default/objects/Contact/fields/Describe_the_applicant_s_situation__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_applicant_s_situation__c</fullName>
    <inlineHelpText>Describe the applicant’s situation. Include why the item or support requested above is needed and how it will benefit the recipient.</inlineHelpText>
    <label>Describe the applicant’s situation</label>
    <type>TextArea</type>
</CustomField>