force-app/main/default/objects/Contact/fields/Disability_Description__c.field-meta.xml
<CustomField>
    <fullName>Disability_Description__c</fullName>
    <inlineHelpText>If &quot;Disability Type&quot; is listed as &quot;Other&quot;, please specify</inlineHelpText>
    <label>Disability Description</label>
    <type>TextArea</type>
</CustomField>