force-app/main/default/objects/Contact/fields/Does_Beneficiary_Drive__c.field-meta.xml
<CustomField>
    <fullName>Does_Beneficiary_Drive__c</fullName>
    <label>Does Beneficiary Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>