force-app/main/default/objects/Contact/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>