force-app/main/default/objects/Contact/fields/Estimated_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Funding_Amount__c</fullName>
    <label>Estimated Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>