force-app/main/default/objects/Contact/fields/Existing_Will__c.field-meta.xml
<CustomField>
    <fullName>Existing_Will__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Will</label>
    <type>Checkbox</type>
</CustomField>