force-app/main/default/objects/Contact/fields/Fax_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Phone_Number__c</fullName>
    <label>Fax Phone Number</label>
    <type>Phone</type>
</CustomField>