force-app/main/default/objects/Contact/fields/Food_Stamps_Vision_Card_per_month__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps_Vision_Card_per_month__c</fullName>
    <label>Food Stamps/Vision Card (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>