force-app/main/default/objects/Contact/fields/FR2_Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>FR2_Return_Receipt_Date__c</fullName>
    <label>FR2 Return Receipt Date</label>
    <type>Date</type>
</CustomField>