force-app/main/default/objects/Contact/fields/FR3_Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>FR3_Return_Receipt_Date__c</fullName>
    <label>FR3 Return Receipt Date</label>
    <type>Date</type>
</CustomField>