force-app/main/default/objects/Contact/fields/FR_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>FR_Return_Date__c</fullName>
    <label>FR Return Date</label>
    <type>Date</type>
</CustomField>