force-app/main/default/objects/Contact/fields/Funds_subject_to_Medicaid_Medicare_Lien__c.field-meta.xml
<CustomField>
    <fullName>Funds_subject_to_Medicaid_Medicare_Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funds subject to Medicaid/Medicare Lien</label>
    <type>Checkbox</type>
</CustomField>