force-app/main/default/objects/Contact/fields/Future_Funded_Converted_to_Active__c.field-meta.xml
<CustomField>
    <fullName>Future_Funded_Converted_to_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Funded Converted to Active</label>
    <type>Checkbox</type>
</CustomField>