force-app/main/default/objects/Contact/fields/Gender_Pronoun_For_Templates__c.field-meta.xml
<CustomField>
    <fullName>Gender_Pronoun_For_Templates__c</fullName>
    <formula>CASE(TEXT(GenderIdentity),
&quot;Male&quot;, &quot;his&quot;,  
&quot;Female&quot;, &quot;her&quot;,
&quot;their&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender Pronoun (For Templates)</label>
    <type>Text</type>
</CustomField>