force-app/main/default/objects/Contact/fields/Generated_Beneficiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Generated_Beneficiary_ID__c</fullName>
    <description>This field is populated by a flow that generates a Beneficiary ID for an Account. It is then used in the Beneficiary ID formula field, which is required for syncing data with True Link.</description>
    <label>Generated Beneficiary ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>