force-app/main/default/objects/Contact/fields/Has_Spending_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Spending_Plan__c</fullName>
    <label>Has Spending Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>