force-app/main/default/objects/Contact/fields/Home_Cost__c.field-meta.xml
<CustomField>
    <fullName>Home_Cost__c</fullName>
    <label>Home Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>