force-app/main/default/objects/Contact/fields/Home_Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Home_Other_Explanation__c</fullName>
    <label>Home Other Explanation</label>
    <type>TextArea</type>
</CustomField>